--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
-script: ruby --version
-before_install: rvm get stable
+script: rvm list && ruby --version
+#before_install: rvm install ruby-2.2.2
 
